@@ -1,0 +1,2 @@
+<KEYVALUE VALUETYPE="string">TestSuite_SAE_LD</KEYVALUE>
+<KEYVALUE VALUETYPE="string">TestSuite_SAE_IF</KEYVALUE>
