@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="4711" PROTOCOLVERSION="1.0"><SIMPLEREQ><IMETHODCALL NAME="Associators"><LOCALNAMESPACEPATH><NAMESPACE NAME="root"></NAMESPACE><NAMESPACE NAME="interop"></NAMESPACE></LOCALNAMESPACEPATH>
+<IPARAMVALUE NAME="ObjectName"><INSTANCENAME CLASSNAME="Cim_listenerdestination"><KEYBINDING NAME="name"><KEYVALUE VALUETYPE="string">TestSuite_SAE_LD</KEYVALUE></KEYBINDING></INSTANCENAME></IPARAMVALUE>
+<IPARAMVALUE NAME="IncludeQualifiers"><VALUE>FALSE</VALUE></IPARAMVALUE>
+<IPARAMVALUE NAME="IncludeClassOrigin"><VALUE>TRUE</VALUE></IPARAMVALUE>
+</IMETHODCALL></SIMPLEREQ>
+</MESSAGE></CIM>
